# deepsearch-agents-learning

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/agent/: llm.py  main_agent.py  prompts.py
app/agent/subagents/: database_query_agent.py  knowledge_base_agent.py  network_search_agent.py
app/api/: context.py  monitor.py  server.py
app/prompt/: prompts.yml
app/ragflow/: knowledge_demo.py  rag_config.py
app/tools/: db_tools.py  markdown_tools.py  pdf_tools.py  ragflow_tools.py  tavily_tool.py  upload_file_read_tool.py
app/utils/: path_utils.py  word_converter.py
docker/: docker-compose.yaml
docker/mysql/: mysql.sql
examples/: 1-deep-agent-quickstart-search.py  10-filesystem-backend-memory.py  11-store-backend-cross-session-memory.py  12-composite-backend-routing.py  13-model-call-limit-middleware.py  14-custom-tool-call-middleware.py  15-skills-from-filesystem.py  2-deep-agent-streaming-chunks.py  3-dict-subagents-routing.py  4-async-subagents-streaming.py  5-subagent-nesting-limits.py  6-langgraph-subagent-wrapper.py  7-langchain-agent-subagent-wrapper.py  8-human-approval-interrupt-resume.py  9-human-edit-tool-args-resume.py
examples/skills/code-reviewer/: SKILL.md
examples/skills/emoji-translator/: SKILL.md
examples/test_docs/sub_dir/: 测试文件.docx  测试文件.md  金融电商行业分析报告.md
frontend/: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css  types.ts
frontend/src/components/: AgentTopology.tsx  ChatComposer.tsx  ConversationThread.tsx  EventStream.tsx  (+6 more)
(+5 files in other folders)
